# nm-otool

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
nm/: CMakeLists.txt  cmp_sym_info.c  get_sym_info_mach_o_32.c  get_sym_info_mach_o_64.c  get_symbol_char.c  get_symbol_map.c  get_symtab_cmd.c  nm.c  nm.h  print_symtab.c  print_symtab_mach_o_32.c  print_symtab_mach_o_64.c
nm/mach-o/: get_nlists_mach_o_32.c  get_nlists_mach_o_64.c  get_sections_mach_o_32.c  get_sections_mach_o_64.c  get_sym_info_table_mach_o_32.c  get_sym_info_table_mach_o_64.c  get_symtab_mach_o_32.c  get_symtab_mach_o_64.c
otool/: CMakeLists.txt  otool.c  otool.h  print_sects.c  print_text.c
otool/mach-o/: get_section_content_mach_o_64.c  get_sections_data_mach_o_32.c  get_sections_data_mach_o_64.c
share/: CMakeLists.txt  del_binary_info.c  get_binary_info.c  get_load_cmds.c  get_load_cmds_mach_o_32.c  get_load_cmds_mach_o_64.c  get_segments.c  parse_fat_header.c  parse_magic.c  parse_magick.c  print_error.c  print_hexdump.c  print_nt_error.c  share.h  validate_load_cmds.c
share/fat/: get_header_fat.c  parse_fat_header_32.c  parse_fat_header_64.c  parse_header_fat.c  parse_header_fat_32.c  parse_header_fat_64.c
share/mach-o/: get_header_mach_o_32.c  get_header_mach_o_64.c  get_load_cmd_mach_o.c  get_load_cmds_mach_o_32.c  get_load_cmds_mach_o_64.c  get_sections_mach_o_32.c  get_sections_mach_o_64.c  get_segments_mach_o_32.c  get_segments_mach_o_64.c
test/: hello.c
test/errors/truncated/32/: bad_string_index  fileoff  fileoff_plus_filesize  section_size  stroff  stroff_plus_strsize  symoff  symoff_plus_nsyms
